--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- navigation start-->
 <section class="navigation">
-  <nav class="navbar navbar-expand-xl navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#"><img src="/assets/img/logo.png" alt="logo" class="w-100 img-fluid"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,32 +27,30 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item px-2 ">
-            <a class="nav-link fs-5 active" aria-current="page" href="#">Home</a>
+            <a class="nav-link text-light fs-5 active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item px-2 ">
-            <a class="nav-link  fs-5" href="#">About us</a>
+            <a class="nav-link text-light  fs-5" href="#">About us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fs-5" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link text-light dropdown-toggle fs-5" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Our interests
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item text-light" href="#">Action</a></li>
+              <li><a class="dropdown-item text-light" href="#">Another action</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item text-light" href="#">Something else here</a></li>
             </ul>
           </li>
           <li class="nav-item px-2 ">
-            <a class="nav-link fs-5" href="#">Values</a>
+            <a class="nav-link text-light fs-5" href="#">Values</a>
           </li>
           <li class="nav-item px-2 ">
-            <a class="nav-link fs-5" href="#">Current Projects</a>
-          </li>
-          <li class="nav-item px-2 ">
-            <a class="nav-link fs-5 btn btn-main px-4 text-light" href="#"> Sign Up</a>
+            <a class="nav-link text-light fs-5" href="#">Current Projects</a>
           </li>
         </ul>
+        <button class="btn btn-main px-4 py-2 text-light fw-bold">Submit <i class="fa-solid fa-plus ms-2"></i> </button>
       </div>
     </div>
   </nav>
@@ -55,20 +59,22 @@
 
 <!-- hero section sart -->
 <section class="hero mt-5 py-5">
-
+  <div class="container">
     <div class="row">
-      <div class="hero-content">
-        <h1>
-          Let’s take a 
-tour to <span class="redmark fw-bolder">Blockchain</span>
-Technology
-        </h1>
+      <div class="col text-center text-light">
+        <h1 class="fw-normal display-4">Stunning Pro Stock Vectors</h1>
+        <p class="mt-3">High quality Vectors with worry-free licensing for personal and commercial use.</p>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
       </div>
     </div>
-</div>
+  </div>
 </section>
 <!-- hero section end -->
-
+<!-- fontawesome -->
+<script src="https://kit.fontawesome.com/46b3d453fd.js" crossorigin="anonymous"></script>
 <!-- bootstrap-js-link     -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
